# shoppinglist

./: .gitignore  Cargo.toml  README.md
curl/: credentials  delete-entry.sh  get-entries.sh  get-entry.sh  get-groups.sh  patch-entry.sh  post-entry.sh  watch-get-entries.sh  watch-get-groups.sh
db-filler-files/: entries.sql  groups.sql  users.sql  users_groups_relations.sql
migrations/: 20240408191920_create_trigger_set_updated.sql  20240408192029_create_users.sql  20240426100338_create_groups.sql  20240426101038_create_users_groups_relations.sql  20240506062107_create_entries.sql
src/: main.rs
src/auth/: middleware.rs
src/v1/: handlers.rs  mod.rs  models.rs  routes.rs
tools/fill-db/: main.rs
