[package]
name = "shoppinglist"
version = "0.1.0"
edition = "2021"
default-run = "shoppinglist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
base64 = "0.22.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures-util = "0.3.30"
is_empty = "0.2.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono"] }

# optimizing these crates, so that password checking is not too slow during development
[profile.dev.package.bcrypt]
opt-level = 3
debug = false
debug-assertions = false
[profile.dev.package.blowfish]
opt-level = 3
debug = false
debug-assertions = false

[[bin]]
name = "shoppinglist"
path = "src/main.rs"

[[bin]]
name = "fill-db"
path = "tools/fill-db/main.rs"
